--- a/trunk/homepage/default.css
+++ b/trunk/homepage/default.css
@@ -77,15 +77,15 @@ div.menu a.active
 div.menu a
 {
   text-decoration: none;
-  font-size: 1.0em;
+  font-size: 14px;
   font-family: Sans-Serif;
   font-weight: bold;
   text-align: center;
 
   color: red;  
   background-color: black;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 
 dl.news dd { 
